[gd_scene load_steps=2 format=2]

[ext_resource path="res://Player/Camera.gd" type="Script" id=1]

[node name="Camera" type="Camera2D"]
position = Vector2( 160, 90 )
current = true
smoothing_enabled = true
script = ExtResource( 1 )

[node name="Limits" type="Node" parent="."]

[node name="TopLeft" type="Position2D" parent="Limits"]
position = Vector2( -686.225, -292.17 )

[node name="BottomRight" type="Position2D" parent="Limits"]
position = Vector2( 989.743, 180 )

[node name="ShakeTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="ShakeTimer" to="." method="_on_ShakeTimer_timeout"]
